<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/bg_input"
            android:backgroundTint="#F0F0F0"
            android:drawableLeft="@drawable/ic_search"
            android:drawableRight="@drawable/ic_filter"
            android:drawablePadding="10dp"
            android:fontFamily="@font/manrope"
            android:hint="@string/search"
            android:paddingLeft="20dp"
            android:paddingTop="16dp"
            android:paddingRight="20dp"
            android:paddingBottom="14dp"
            android:textColor="@color/icon_grey"
            android:textColorHint="#BDBDBD"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <FrameLayout

            android:layout_marginTop="82dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/events"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:overScrollMode="never">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="23dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/browse_by_category"
                        android:textColor="@color/text_black"
                        android:textSize="18sp" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never"
                        android:scrollbars="none">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginLeft="22dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/cinema"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/concert"
                                    android:textColor="@color/white" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/theater"
                                    android:textColor="@color/white" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/opera_and_ballet"
                                    android:textColor="@color/white" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/clubs_and_pubs"
                                    android:textColor="@color/white" />
                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/entertainment"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/tours"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/interesting_places"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/museums"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="0dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/conference"
                                    android:textColor="@color/white" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                app:cardBackgroundColor="@color/eerie_black"
                                app:cardCornerRadius="15dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="70dp"
                                    android:text="@string/other"
                                    android:textColor="@color/white" />
                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>

                <View style="@style/Divider"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/container_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



            </LinearLayout>


        </FrameLayout>


    </FrameLayout>
</androidx.core.widget.NestedScrollView>